tests/error/using_on_main/main.adept

pragma => adept("3.0")

trait Say {
    func say() void
}

#[using $say Say]
func main {}

